// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package contract;

option go_package = "https://github.com/hyperledgendary/fabric-ledger-protos-go/contract";

import "google/protobuf/timestamp.proto";

import "common_messages.proto";

message Collection {
  string name = 1;
}

message State {
  string key = 1;
  bytes value = 2;
}

message StateHistory {
  string key = 1;
  bytes value = 2;
  string transaction_id = 3;
  google.protobuf.Timestamp timestamp = 4;
  bool is_delete = 5;
}

message KeyRangeQuery {
  string start_key = 1;
  string end_key = 2;
}

message RichQuery { }

message CreateStateRequest {
  TransactionContext context = 1;
  Collection collection = 2;
  State state = 3;
}

message CreateStateResponse { }

message ReadStateRequest {
  TransactionContext context = 1;
  Collection collection = 2;
  string state_key = 3;
}

message ReadStateResponse {
  State state = 1;
}

message UpdateStateRequest {
  TransactionContext context = 1;
  Collection collection = 2;
  State state = 3;
}

message UpdateStateResponse { }

message DeleteStateRequest {
  TransactionContext context = 1;
  Collection collection = 2;
  string state_key = 3;
}

message DeleteStateResponse { }

message ExistsStateRequest {
  TransactionContext context = 1;
  Collection collection = 2;
  string state_key = 3;
}

message ExistsStateResponse {
  bool exists = 1;
}

message GetStatesRequest {
  TransactionContext context = 1;
  Collection collection = 2;
  oneof query {
    KeyRangeQuery by_key_range = 3;
    RichQuery by_rich_query = 4;
  }
}

message GetStatesResponse {
  repeated State states = 1;
}
